<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/scan_book"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:hint="@string/scan_book"
        android:textSize="25dip"
        android:singleLine="true"
        android:background="@drawable/scan_bg"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        />

    <ImageButton
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/scan_book"
        android:layout_alignTop="@id/scan_book"
        android:layout_alignBottom="@id/scan_book"
        android:background="@drawable/scanbtn" 
    />
    
    <RadioGroup 
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_book"
        android:orientation="horizontal"
        android:layout_marginLeft="20dip"
        >
        <RadioButton 
            android:id="@+id/rbookname"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="按书名"
        	android:textSize="18dip"
        	android:button="@drawable/radio"/>
        <RadioButton 
            android:id="@+id/rauthor"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="按作者"
        	android:textSize="18dip"
        	android:layout_marginLeft="25dip"
        	android:button="@drawable/radio"
        	/>
    </RadioGroup>
    
    
    <TextView 
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text" 
        android:textSize="20dip"
        android:textColor="#379bcd"
        android:layout_below="@id/rgroup"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        />
    <EditText 
        android:id="@+id/num"
        style="@style/my_edittext_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputnum"
        android:singleLine="true"
        
        android:layout_below="@id/login_text"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"/>
    <EditText 
        android:id="@+id/pwd"
        style="@style/my_edittext_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputpwd"
        android:singleLine="true"
        android:password="true"
        android:layout_below="@id/num"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"/>
    <ImageButton 
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_bg" 
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"/>
    <TextView 
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="20dip"
        android:textColor="#379bcd"
        android:layout_below="@id/login_button"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="10dip"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpdetail"
        android:textSize="15dip"
        android:layout_below="@id/help"
        android:layout_marginTop="12dip"
        android:layout_marginLeft="10dip"/>

</RelativeLayout>
